// Vitest Snapshot v1, https://bun:test.dev/guide/snapshot.html

exports[`solve Objekt -- deepWalk 1`] = `
"{
  a: "a",
  b: "b",
  c: "c",
  abc: {
    a: "a",
    b: "b",
    c: "c"
  }
}"
`;

exports[`solve Objekt -- occur twice 1`] = `
"{
  a: "c",
  b: "c"
}"
`;

exports[`solve Objekt 1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}"
`;
